[package]
name = "josekit"
version = "0.6.0"
description = "JOSE (Javascript Object Signing and Encryption) library for Rust."
repository = "https://github.com/hidekatsu-izuno/josekit-rs"
readme = "README.md"
license = "MIT OR Apache-2.0"
authors = ["Hidekatsu Izuno <hidekatsu.izuno@gmail.com>"]
keywords = ["jose", "jwt", "jws", "jwe", "jwa"]
categories = ["authentication"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["native"]
open-ssl = ["openssl", "openssl-sys"]
native = ["k256", "ring", "rand", "ramp", "aes"]

[dependencies]
thiserror = "1"
anyhow = "1"
once_cell = "1"
regex = "1"
serde_json = { version = "1", features = ["preserve_order"] }
base64 = "0.12"
flate2 = "1.0"
chrono = "0.4"
foreign-types = "0.3.1"
# open-ssl feature dependancies
openssl = { version = "0.10", optional = true }
openssl-sys = { version = "0.9", optional = true }
# native Rust feature dependancies
ring = { version = "0.16.16", features = ["std"], optional = true }
k256 = { version = "0.5.9", features = ["ecdsa", "ecdsa-core", "sha256", "keccak256", "zeroize"], optional = true }
aes = { version = "0.6", optional = true }
rand = { version = "0.7.3", optional = true }
ramp = { version = "0.5", optional = true }

[dev-dependencies]
doc-comment = "0.3.3"
